# simchain

./: .dockerfilelintrc  .dockerignore  .env.example  .env.full.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  RUNBOOK.md  SETTINGS.md  build-bitcoin.sh  build.sh  chainwatch.sh  docker-compose-mempool.yml  docker-compose.yml  docker-entrypoint.sh  nice-to-have.md  review.md  runbook.txt  simulate-reorg.sh  todo-config.md  tools.Dockerfile  tools.Dockerfile.dockerignore
.github/workflows/: ci.yml
crates/control-plane/: Cargo.toml
crates/control-plane/src/: api.rs  apply.rs  backend.rs  compose.rs  control_state.rs  docker_inspect.rs  envfile.rs  faucet_job.rs  faucet_store.rs  hybrid_backend.rs  internal_client.rs  job_store.rs  jobs.rs  main.rs  mcp.rs  network_job.rs  reconcile.rs  reorg_job.rs  rpc_backend.rs  scenario_job.rs  service.rs  state.rs  status.rs  storage.rs  test_support.rs
crates/control-plane/static/: app.js  index.html  styles.css
crates/mining-controller/: Cargo.toml
crates/mining-controller/src/: bootstrap.rs  chain_view.rs  config.rs  control.rs  main.rs  mining.rs  rng.rs  runner.rs  server.rs  wallet.rs
crates/network-agent/: Cargo.toml
crates/network-agent/src/: control.rs  main.rs  server.rs  system.rs
crates/panel/: Cargo.toml
crates/panel/src/: api.rs  apply.rs  compose.rs  docker_inspect.rs  main.rs  mcp.rs  service.rs  state.rs  status.rs  test_support.rs
crates/panel/static/: app.js  index.html  styles.css
crates/reorg/: Cargo.toml
crates/reorg/src/: chain.rs  config.rs  double_spend.rs  lib.rs  main.rs  reorg.rs  runner.rs  wallet.rs
crates/scenario-engine/: Cargo.toml
crates/scenario-engine/src/: burst.rs  config.rs  docker.rs  engine.rs  lib.rs  main.rs  results.rs  rpc.rs  schema.rs  steps.rs
crates/simchain-common/: Cargo.toml
crates/simchain-common/src/: address.rs  amount.rs  burn.rs  env.rs  error.rs  internal_api.rs  lib.rs  live_tuning.rs  logging.rs  rpc.rs
crates/simchain-common/src/config/: common.rs  env.rs  error.rs  mod.rs
crates/simchainctl/: Cargo.toml
crates/simchainctl/src/: client.rs  main.rs  output.rs
crates/simchainctl/src/commands/: mod.rs
crates/spammer/: Cargo.toml
crates/spammer/src/: burn.rs  common.rs  config.rs  control.rs  error.rs  lib.rs  main.rs  node_wallet_spammer.rs  raw_transaction_spammer.rs  runner.rs  server.rs  wallet.rs
docker/: bitcoin-node.Dockerfile  build-bitcoin-image.sh  mempool-pool-seeder.js  netem-entrypoint.sh  netem.Dockerfile  tools.Dockerfile  tools.Dockerfile.dockerignore
docs/: CONTROL_PLANE.md  INTRO.md  MCP.md  NICE-TO-HAVE.md  PARTITIONS.md  REORGS.md  RETUNING.md  RUNBOOK.md  SCENARIOS.md  SETTINGS.md  SNAPSHOTS.md  block-timing-plan.md  control-plan-plan.md  dashboard-control-panel-plan.md  declarative-scenario-engine-plan.md  faucet-plan.md  fee-market-plan.md  network-partition-latency-plan.md  nice-to-have.md  raw-transaction-fixture-importer-plan.md  rebalance-plan.md  reorg-double-spend-plan.md  reorg-double-spend-raw-engine-plan.md  snapshot-restore-plan.md
docs/parked/: fee-market-plan.md
mining-controller/: Cargo.toml  Dockerfile
mining-controller/src/: main.rs
reorg/: .gitignore  Cargo.toml  Dockerfile
reorg/src/: main.rs
scenarios/: all-features-live.yml  ci-checkpoint.yml  fresh-chain-tour.yml  partition-node3.yml  pause-then-burst.yml  rainbow.yml  reorg-during-sync.yml  tutorial-one-block.yml
scripts/: chainwatch.sh  check-compose-security.sh  check-docker-images.sh  degrade.sh  fresh-chain.sh  netem.sh  partition.sh  simulate-reorg.sh  snapshot.sh  spam-burst.sh
spammer/: Cargo.toml  Dockerfile
spammer/src/: common.rs  main.rs  node_wallet_spammer.rs  raw_transaction_spammer.rs
(+6 files in other folders)
