[package]
name = "simchain-control-plane"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.8.9"
bitcoincore-rpc = "0.19.0"
fs2 = "0.4"
minreq = "2"
rand = "0.9"
rmcp = { version = "2.2.0", features = ["server", "transport-streamable-http-server"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simchain-common = { path = "../simchain-common" }
simchain-reorg = { path = "../reorg" }
simchain-scenario-engine = { path = "../scenario-engine" }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"

[dev-dependencies]
http-body-util = "0.1.3"
tempfile = "3"
tower = { version = "0.5.3", features = ["util"] }
