[package]
name = "simchain-mining-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoincore-rpc = "0.19.0"
simchain-common = { path = "../simchain-common" }
anyhow = "1"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
tracing = "0.1"
