[package]
name = "simchain-scenario-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bitcoincore-rpc = "0.19.0"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
simchain-common = { path = "../simchain-common" }
tracing = "0.1"

