[package]
name = "simchainctl"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
minreq = "2"
serde = "1"
serde_json = "1"
simchain-common = { path = "../simchain-common" }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
